tests/suite/snapshots/suite__check__tests__check__bad_assign_procedure.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_assign_procedure.xi:4:5]
   │
 4 │     _ = foo()
   ·     ────┬────  
   ·         ╰────── Cannot initialize with a procedure
───╯

